# celeste-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MEMORY_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION.md  README.md  SEARCH_PERSONALIZATION_IMPLEMENTATION.md  cloudbuild.yaml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: API_DOCUMENTATION.md  COST_ANALYSIS.md  DATABASE_ER_DIAGRAM.md  DEPLOYMENT.md  DEVELOPMENT_GUIDELINES.md  FUTURE_WORK.md  INVENTORY_LIFECYCLE.md  MULTI_CART_IMPLEMENTATION_PLAN.md  PAYMENT_INTEGRATION.md  POPULARITY_AND_PERSONALIZATION.md  PROJECT_REQUIREMENTS.md  PROJECT_STRUCTURE.md  STORES_IMPLEMENTATION_TASK.md  TESTING_CLEANUP.md  TESTING_GUIDE.md  TIERS_SYSTEM_PLAN.md  atomic-operations-fixes.md  code-review-findings.md  odoo_sync_process.md  openapi.yaml  plan_001.md  pricing_optimization.md
docs/commands/: cloud-run-jobs.md  local_development.md
migrations/: 001_search_personalization_tables.sql  001_search_personalization_tables_rollback.sql  002_rename_metadata_to_extra_data.sql  002_rename_metadata_to_extra_data_rollback.sql  003_create_promotions_table.sql  003_create_promotions_table_rollback.sql
scripts/: format.py  promote_user.py  test_pricing_optimization.py
scripts/db/: db_init.py  optimize_search_index.py  pricing_optimization.py  retry_failed_odoo_syncs.py  (+4 more)
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
test/: app.e2e-spec.ts
tests/: constants.py  get_dev_token.py  test_load_products.py  verify_middleware.py
(+257 files in other folders)
