[project]
name = "celeste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "firebase-admin>=7.1.0",
    "geopy>=2.4.1",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "numpy>=2.3.4",
    "pgvector>=0.4.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
]
